# ixf-toolbox

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.en.md  README.md  SECURITY.md  go.mod  go.sum  pyproject.toml  repository_contract_test.go  skills_embed.go
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
cmd/ixf/: cli_integration_test.go  main.go  main_test.go
docs/: agent-routing.md  docs-update.md  go-python-parity.md  messenger.md  migration-from-legacy.md  python-api-sunset.md  python-removal-readiness.md  release.md  supported-platforms.md
docs/superpowers/plans/: 2026-07-13-ixf-toolbox-initial.md  2026-07-15-go-full-python-replacement.md  2026-07-15-go-release-train.md  2026-07-15-python-removal-unblock.md  2026-07-16-messenger-v33.md  2026-07-16-messenger-v34-open-automation.md  2026-07-16-messenger-v35-read-automation.md  2026-07-17-messenger-v36-send-automation.md  2026-07-17-messenger-v37-ga-hardening.md  2026-07-20-agent-routing-messenger-ga.md  2026-07-20-docs-sheets-hardening.md  2026-07-20-docs-update-release-train.md
docs/superpowers/specs/: 2026-07-13-ixf-toolbox-design.md  2026-07-16-messenger-open-automation-design.md  2026-07-20-docs-update-design.md  (+4 more)
internal/cookies/: cookies.go  cookies_test.go  dpapi_other.go  dpapi_windows.go
internal/docslocal/: assets.go  assets_test.go  bitable.go  local.go  local_test.go  remote_test.go  sheets.go
internal/docspublish/: publish.go  publish_test.go
internal/docx/: docx.go  docx_test.go
internal/markdown/: markdown.go  markdown_test.go
internal/messenger/: automation.go  match_test.go  messenger.go  messenger_test.go  selectors.go
internal/okr/: okr.go  okr_test.go
internal/sheets/: sheets.go  sheets_test.go
internal/update/: update.go  update_test.go
scripts/: audit_python_runtime_imports.py  extract_changelog.py  smoke-go-binary.sh  smoke.sh
src/ixf_toolbox/: cli.py  delegate.py  doctor.py  setup.py  update.py
tests/: go_poc_support.py  python_runtime_imports_allowlist.txt  test_cli_contract.py  test_cli_delegate.py  test_cli_help.py  test_core_cookies.py  test_core_cookies_windows.py  test_core_docs.py  test_core_docs_assets.py  test_core_docs_converter.py  test_core_docs_markdown_chunks.py  test_core_docs_publish.py  test_core_docs_reader_remote.py  test_core_okr.py  test_core_okr_write.py  test_delegate_output.py  test_doctor.py  test_doctor_cli.py  test_engineering_assets.py  test_go_poc.py  test_package_contract.py  test_setup.py  test_update.py  test_update_cli.py
tests/fixtures/: docs_publish_sample.md  okr_write.json
(+24 files in other folders)
