[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ixf-toolbox"
version = "0.1.1"
description = "Unified local toolbox for authorized iXunfei document and OKR workflows."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "serialq7ic4", email = "qianch714@gmail.com" }]
dependencies = [
  "requests>=2.31",
  "ixunfei-docx-reader[crypto] @ https://github.com/serialq7ic4/ixunfei-docx-reader/releases/download/v0.1.6/ixunfei_docx_reader-0.1.6-py3-none-any.whl ; platform_system != 'Windows'",
  "ixunfei-docx-reader[windows] @ https://github.com/serialq7ic4/ixunfei-docx-reader/releases/download/v0.1.6/ixunfei_docx_reader-0.1.6-py3-none-any.whl ; platform_system == 'Windows'",
  "ixunfei-docx-writer[crypto] @ https://github.com/serialq7ic4/ixunfei-docx-writer/releases/download/v0.1.0/ixunfei_docx_writer-0.1.0-py3-none-any.whl ; platform_system != 'Windows'",
  "ixunfei-docx-writer[windows] @ https://github.com/serialq7ic4/ixunfei-docx-writer/releases/download/v0.1.0/ixunfei_docx_writer-0.1.0-py3-none-any.whl ; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "ruff>=0.5",
]
crypto = []
windows = []

[project.scripts]
ixf = "ixf_toolbox.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ixf_toolbox"]

[tool.hatch.build.targets.wheel.force-include]
"skills" = "ixf_toolbox/_resources/skills"
