[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ixf-toolbox"
version = "2.16.0"
description = "Unified local toolbox for authorized iXunfei document and OKR workflows."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "serialq7ic4", email = "qianch714@gmail.com" }]
dependencies = [
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "cryptography>=42.0",
  "pytest>=8.0",
  "ruff>=0.5",
]
crypto = [
  "cryptography>=42.0",
]
windows = [
  "cryptography>=42.0",
  "pywin32>=306",
]

[project.scripts]
ixf = "ixf_toolbox.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["src/ixf_toolbox"]

[tool.hatch.build.targets.wheel.force-include]
"skills" = "ixf_toolbox/_resources/skills"
